--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,14 +2,20 @@ name: CI
 on: workflow_dispatch
 
 jobs:
-  # test:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Checkout Repo
-  #       uses: actions/checkout@v3
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repo
+        uses: actions/checkout@v3
+      - name: Cache
+        uses: actions/cache@v3
+        with:
+          path: ~/build
+          key: gradle-files
 
-  #     - name: Test
-  #       run: ./gradlew test
+      - name: Test
+        run: ./gradlew test
+
 
   build:
     runs-on: ubuntu-latest
@@ -17,6 +23,12 @@ jobs:
       - name: Checkout Repo
         uses: actions/checkout@v3
 
+      - name: Cache
+        uses: actions/cache@v3
+        with:
+          path: ~/build
+          key: gradle-files
+          
       - name: Build
         run: ./gradlew build
         
